Fixed font size for nav links on smallest display

--- a/product/css/styles.css
+++ b/product/css/styles.css
@@ -319,10 +319,12 @@ https://stackoverflow.com/questions/20962524/bootstrap-3-0-affix-doesnt-work-whe
 	}
 
 	.navbar-nav {
-		font-size: 0.8em;
+		font-size: 0.9em;
 	}
 
 	#navbar .navbar-nav .nav-link {
+		padding-left: 0.2rem;
+		padding-right: 0.2rem;
 		margin-left: 0.2rem;
 		margin-right: 0.2rem;
 	}
@@ -344,8 +346,14 @@ https://stackoverflow.com/questions/20962524/bootstrap-3-0-affix-doesnt-work-whe
 		font-size: 0.8em;
 		padding-left: 0.1rem;
 		padding-right: 0.1rem;
-		margin-left: 0.1rem;
-		margin-right: 0.1rem;
+		margin-left: 0;
+		margin-right: 0;
+		border: 1px solid #555;
+		border-radius: 0;
+	}
+
+	#navbar .nav-link:hover {
+		transform: none;
 	}
 
 /*Thanks to Tahir Yasin's answer for the way for vertically centering an image on this thread: 
@@ -387,5 +395,11 @@ https://stackoverflow.com/questions/7273338/how-to-vertically-align-an-image-ins
 		width: 100%;
 		margin: 0 auto;
 		margin-bottom: 0.33em;
+	}
+}
+
+@media screen and ( max-width: 47em) {
+	#nav-bar #navbar .navbar-nav .nav-link {
+		font-size: 1em;
 	}
 }
